--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,6 +1,10 @@
+@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
+
 
 
 
@@ -471,4 +475,14 @@ h6,
 #menu-0 .link[aria-expanded="true"],
 #menu-0 .dropdown-item[aria-expanded="true"] {
   color: #c0a375!important;
+}
+#header1-1 .mbr-section-lead SPAN {
+  font-family: 'PT Sans Narrow', sans-serif;
+  font-size: 20px;
+  text-align: left;
+}
+#header1-1 .mbr-section-title {
+  font-size: 32px;
+  font-family: 'Open Sans', sans-serif;
+  text-align: center;
 }
