--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,10 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=PT+Sans:400,700);
-
-
-
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 
 
 
@@ -438,14 +434,14 @@ h6,
 #menu-0 .link,
 #menu-0 .dropdown-item {
   color: #1c75bc;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
 #menu-0 .link {
-  font-size: 0.75rem;
+  font-size: 0.95rem;
 }
 #menu-0 .dropdown-item,
 #menu-0 .nav-dropdown-sm .link {
-  font-size: 0.812rem;
+  font-size: 1.029rem;
 }
 #menu-0 .link:hover,
 #menu-0 .dropdown-item:hover,
@@ -455,19 +451,19 @@ h6,
 }
 #menu-0 .link[aria-expanded="true"],
 #menu-0 .dropdown-menu {
-  background: #d6d6d6;
+  background: #e6e6e6;
 }
 #menu-0 .nav-dropdown-sm .link:focus,
 #menu-0 .nav-dropdown-sm .link:hover,
 #menu-0 .nav-dropdown-sm .dropdown-item:focus,
 #menu-0 .nav-dropdown-sm .dropdown-item:hover {
-  background: #e7e7e7!important;
+  background: #f7f7f7!important;
 }
 #menu-0 .navbar,
 #menu-0 .nav-dropdown-sm,
 #menu-0 .nav-dropdown-sm .link[aria-expanded="true"],
 #menu-0 .nav-dropdown-sm .dropdown-menu {
-  background: #efefef;
+  background: #ffffff;
 }
 #menu-0 .bg-color.transparent .link {
   color: #1c75bc;
@@ -484,26 +480,32 @@ h6,
 #menu-0 .dropdown-item[aria-expanded="true"] {
   color: #1c75bc!important;
 }
-#header1-1 .mbr-section-lead SPAN {
-  font-family: 'PT Sans Narrow', sans-serif;
-  font-size: 20px;
-  text-align: left;
+#msg-box5-9 H3 {
+  color: #cccccc;
+  font-size: 22px;
+  text-align: right;
 }
-#header1-1 .mbr-section-title {
-  font-size: 21px;
-  font-family: 'Open Sans', sans-serif;
-  text-align: center;
-}
-#header1-1 .mbr-section-title SPAN {
-  font-family: 'PT Sans', sans-serif;
-  font-size: 32px;
+#msg-box5-9 P {
+  color: #efefef;
+  text-align: right;
+  font-size: 14px;
 }
 #msg-box5-5 H3 {
-  font-size: 32px;
+  font-size: 22px;
+  text-align: right;
+}
+#msg-box5-5 P {
+  font-size: 14px;
 }
 #form1-4 .form-control-label {
   color: #232323;
 }
 #form1-4 .mbr-section-title {
   font-size: 32px;
+}
+#contacts1-8 P {
+  color: #28324e;
+}
+#contacts1-8 STRONG {
+  color: #475577;
 }
